build 2 types of packages